--- a/build.gradle
+++ b/build.gradle
@@ -27,10 +27,15 @@ repositories {
         name = 'sonatype'
         url = 'https://oss.sonatype.org/content/groups/public/'
     }
+    maven {
+        name = 'wesjd-repo'
+        url = 'https://nexus.wesjd.net/repository/thirdparty'
+    }
 }
 
 dependencies {
-    compile 'org.spigotmc:spigot:1.10.2-R0.1-SNAPSHOT'
+    compile 'org.spigotmc:spigot:1.12-R0.1-SNAPSHOT'
+    compile 'net.wesjd:anvilgui:1.1.1-SNAPSHOT'
     compile 'com.google.code.gson:gson:2.6.2'
 }
 
