--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ else
 group "chanceCubes.CCubesCore"
 version project.mod_version
 
+def spigotVersion = "1.15.2-R0.1-SNAPSHOT"
+
 repositories {
     mavenCentral()
     maven {
@@ -30,8 +32,8 @@ repositories {
 }
 
 dependencies {
-    compile 'org.spigotmc:spigot-api:1.14.4-R0.1-SNAPSHOT'
-    compile 'org.spigotmc:spigot:1.14.4-R0.1-SNAPSHOT'
+    compile "org.spigotmc:spigot-api:${spigotVersion}"
+    compile "org.spigotmc:spigot:${spigotVersion}"
 }
 
 processResources {
@@ -49,7 +51,7 @@ jar {
     manifest {
         attributes(["Specification-Title": "chance_cubes",
                     "Specification-Vendor": "turkey2349 & Musician101",
-                    "Specification-Version": "1.13.2-R0.1-SNAPSHOT", // We are version 1 of the modlauncher specification
+                    "Specification-Version": "${spigotVersion}",
                     "Implementation-Title": project.name,
                     "Implementation-Version": "${version}",
                     "Implementation-Vendor" :"turkey2349",
@@ -60,7 +62,7 @@ jar {
 compileJava {
     options.encoding = 'UTF-8'
     def mainName = 'CCubesCore.java'
-    def main = 'src/main/java/chanceCubes/' + mainName
+    def main = "src/main/java/chanceCubes/${mainName}"
     def tempDir = 'build/tmp/sourcesCache'
     doFirst {
         copy {
@@ -72,7 +74,7 @@ compileJava {
     }
     doLast {
         copy {
-            from tempDir + '/' + mainName
+            from "${tempDir}/${mainName}"
             into project.file(main).parent
         }
     }
